--- a/Module_5.ipynb
+++ b/Module_5.ipynb
@@ -1717,8 +1717,8 @@
    "source": [
     "Listed below are the plants associated with each individual cluster.  Note the below observations:\n",
     "\n",
-    "* There is some overlap between clusters 0, 1 and 3.  \"Maize\", \"chickpea\", \"kidneybeans\", \"papaya\" and \"cotton\" appear in clusters 0 and 1.  \"Pigeonpeas\", \"papaya\", \"coconut\", \"jute\" and \"coffee\" appear in clusters 0 and 3.  Only \"papaya\" overlaps with clusters 1 and 3. \n",
-    "* The plants in cluster 2 (\"grapes\", \"apple\") do not have any overlap."
+    "* There is some overlap between clusters 0, 2 and 3.  \"Maize\", \"pigeonpeas\", \"mungbean\", \"blackgram\", \"pomegranate\", \"mango\", \"organge\", \"papaya\", \"jute\" and \"coffee\" appear in clusters 0 and 2.  \"Pigeonpeas\", \"mothbeans\" and \"lentil\" appear in clusters 0 and 3.  Only \"pigeonpeas\" overlaps with clusters 2 and 3. \n",
+    "* The plants in cluster 1 (\"grapes\", \"apple\") do not have any overlap."
    ]
   },
   {
@@ -1830,7 +1830,7 @@
    "id": "936a7157",
    "metadata": {},
    "source": [
-    "Before we attempt to determine why cluster 1 is significantly different, let us clean up the clusters so that there are no overlaps.  To do this, we will only consider a plant a member of a cluster if there are 50 or more instances."
+    "Before we attempt to determine why cluster 1 is significantly different, let us clean up the clusters so that there are no overlaps.  To do this, we will only consider a plant a member of a cluster if there are 50 or more instances.  Notice now that cluster 3 only has two crops."
    ]
   },
   {
